--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Gnuk - software for GPG USB Token
 
 							    Version 0.4
-							     2010-11-XX
+							     2010-11-09
 						           Niibe Yutaka
 				      Free Software Initiative of Japan
 
@@ -26,7 +26,7 @@ USB Token by Gnuk everywhere.
 Release notes
 =============
 
-This is fourth release of Gnuk.  While it works well for specific
+This is fifth release of Gnuk.  While it works well for specific
 usages, it is still experimental.
 
 Tested features are:
