--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-04  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/flash.c (flash_keystore_release): Reset keystore storage.
+
 2010-12-03  NIIBE Yutaka  <gniibe@fsij.org>
 
 	Keystore management changes.
