--- a/THANKS
+++ b/THANKS
@@ -5,6 +5,7 @@ Gnuk was originally written by NIIBE Yutaka.  People contributed by
 encouraging the development, testing the implementation, suggesting
 improvements, or fixing bugs.  Here is a list of those people.
 
+Achim Pietig		achim@pietig.com
 Andre Zepezauer		andre.zepezauer@student.uni-halle.de
 Hironobu SUZUKI		hironobu@h2np.net
 Jan Suhr		jan@suhr.info
