--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Gnuk - software for GPG USB Token
 
 							    Version 0.5
-							     2010-12-XX
+							     2010-12-13
 						           Niibe Yutaka
 				      Free Software Initiative of Japan
 
@@ -74,10 +74,10 @@ We use Olimex STM32-H103 board.  We also use STM32 part of STM8S
 Discovery Kit.
 
 With DfuSe support, CQ STARM and STBee Mini are also our targets.  But
-those target with DfuSe are basically not for normal use but for
-experiment, because it would be impossible for DfuSe to disable read
-from flash.  For real use, kill DfuSe and enable read protect using
-JTAG debugger.
+those targets with DfuSe are basically not for normal use but for
+experiments, because it would be impossible for DfuSe to disable read
+from flash.  For real use, please consider killing DfuSe and enable
+read protect using JTAG debugger.
 
 I think that it could run on Olimex STM32-P103, or STBee too.
 Besides, we are porting it to STM32 Primer 2.
