--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-24  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/pin-cir.c: New file.
+
 2010-12-20  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp.c (GPGthread): Added PINPAD_SUPPORT.
