--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-08  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-icc.c (icc_handle_data): Handle the case of
+	ICC_STATE_SEND (back again to the implementation of v0.4).
+	(USBthread): Don't send back larger block (for libccid 1.3.11).
+
 2011-01-07  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp.c (cmd_read_binary): Call gpg_do_get_data for AID.
