--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,15 @@
 Gnuk NEWS - User visible changes
 
+* Major changes in Gnuk 0.7
+
+  Released 2011-01-15, by NIIBE Yutaka
+
+** Bug fix only.
+In version 0.6, a severe bug was introduced in usb-icc.c when adding a
+work around for libccid 1.3.11.  The fix is one-liner, but it is worth
+to release newer version.
+
+
 * Major changes in Gnuk 0.6
 
   Released 2011-01-14, by NIIBE Yutaka
