--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-15  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-icc.c (icc_handle_data): Bug fix: add break for case
+	ICC_STATE_SEND.
+
 2011-01-14  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* Version 0.6.
