--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,22 @@
 Gnuk NEWS - User visible changes
 
+* Major changes in Gnuk 0.9
+
+  Released 2011-01-XX, by NIIBE Yutaka
+
+** Better interoperability to OpenSC.
+Gnuk is not yet supported by OpenSC, but it should be.  With this
+changes in Gnuk, it could be relatively easily possible to support
+Gnuk Token by OpenSC with a few changes to libopensc/card-openpgp.c,
+libopensc/pkcs15-openpgp.c and pkcs11/framework-pkcs15.c.
+
+** New board support "STBEE"
+STBEE is a board by Strawberry Linux Co., Ltd., and it has
+STM32F103VET6 on the board.  The chip is High Density CPU with 512KB
+flash memory and many I/O.  If you want to connect sensor, display,
+etc., this board would be good candidate.
+
+
 * Major changes in Gnuk 0.8
 
   Released 2011-01-19, by NIIBE Yutaka
