--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,22 @@
 2011-01-27  NIIBE Yutaka  <gniibe@fsij.org>
 
-	* src/openpgp-do.c (gpg_do_table): Exclude GPG_DO_CH_CERTIFICATE
-	for now.
+	* src/usb-icc.c (res_APDU_pointer): New.
+	(icc_handle_data, USBthread): Handle res_APDU_pointer.
+
+	* src/openpgp.h (GPG_COMMAND_NOT_ALLOWED): New.
+
+	* src/openpgp.c (INS_UPDATE_BINARY, FILE_EF_CH_CERTIFICATE)
+	(FILE_EF_RANDOM, cmd_update_binary): New.
+	(process_command_apdu): Initialize res_APDU_pointer.
+
+	* src/openpgp-do.c (gpg_do_get_data): Handle GPG_DO_CH_CERTIFICATE.
+
+	* src/gnuk.ld.in (.gnuk_ch_certificate): New.
+
+	* src/flash.c (flash_check_blank, flash_erase_binary)
+	(flash_write_binary): New.
+
+	* src/openpgp-do.c (gpg_do_table): Exclude GPG_DO_CH_CERTIFICATE.
 
 	* src/openpgp.c (cmd_reset_user_password): Add PINPAD_SUPPORT.
 
