--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-29  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb_prop.c (gnuk_device_Get_Interface_Setting): Handle the
+	case where we have multiple interfaces.
+
 2011-01-28  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* tool/gnuk_update_binary.py: New.
