--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2011-02-01  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* Version 0.9.
+
+	* src/openpgp-do.c (extended_capabilities): Change value for card
+	holder certificate.
+
+	* src/usb_prop.c (gnuk_device_SetInterface): New.
+
 2011-01-29  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/usb_prop.c (gnuk_device_Get_Interface_Setting): Handle the
